获取近一个月内的历史推荐日期

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,14 +4,11 @@
     <item android:id="@+id/action_recommend"
           android:title="@string/recommend"
           android:icon="@drawable/hot" />
-    <item android:id="@+id/action_history"
-          android:title="@string/history"
-          android:icon="@drawable/hot" />
     <item android:id="@+id/action_girl"
           android:title="@string/girl"
-          android:icon="@drawable/hot" />
-    <item android:id="@+id/action_video"
-          android:title="@string/video"
-          android:icon="@drawable/hot" />
+          android:icon="@drawable/girl" />
+    <item android:id="@+id/action_history"
+          android:title="@string/history"
+          android:icon="@drawable/history" />
 
 </menu>
