--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_height="?attr/actionBarSize"
         android:translationZ="6dp"
         android:layout_gravity="start"
+        android:background="@drawable/shape_bottom_bg"
         app:menu="@menu/bottom_menu" />
 
 </LinearLayout>
