--- a/app/src/main/res/layout/item_girl.xml
+++ b/app/src/main/res/layout/item_girl.xml
@@ -6,12 +6,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_margin="8dp"
-    app:cardElevation="6dp">
+    app:cardElevation="8dp">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerInside"/>
+        android:scaleType="fitCenter"/>
 
 </android.support.v7.widget.CardView>
